# crewai-mcp-neo4j-fastapi

./: .dockerignore  .gitmodules  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  DOCKER_UNIFIED.md  Dockerfile  Dockerfile.unified  GRAPH_DATA_SCIENCE.md  LAUNCH_STATUS.md  LICENSE  LICENSE.txt  MARKETING_AGENTS.md  PRODUCTION_READINESS_FINAL.md  PRODUCTION_REQUIREMENTS.md  README.md  UNIFIED_PLATFORM_GUIDE.md  build-unified.sh  cai.py  crew_manager.py  docker-compose.full-stack.yml  docker-compose.unified.yml  docker-compose.yml  main.py  pyproject.toml  requirements.txt  sample.env  setup-full-stack.sh  setup.sh  start.sh
frontend/: .env.local.example  Dockerfile  next.config.js  package.json
frontend/app/api/chat/crewai/: route.ts
frontend/app/api/health/: route.ts
